syntax = "proto3";

option java_package = "transportAgency.proto";

message Employee {
  int64 id = 1;
  string username = 2;
  string pass = 3;
}

message Trip {
  int64 id = 1;
  string destination = 2;
  string departureDate = 3;
  string departureTime = 4;
  int32 noSeatsAvailable = 5;
}

message Reservation {
  int64 id = 1;
  string clientName = 2;
  int32 noSeats = 3;
  int64 tripId = 4;
}

message Seat {
  int64 seatNo = 1;
  string clientName = 2;
}

message Request {
  enum RequestType {
    LOGIN = 0;
    LOGOUT = 1;
    UPDATE_SEARCH = 2;
    GET_EXCURSII = 3;
    GET_EXCURSII_ORE = 4;
    GET_FREE_SEATS = 5;
    ADD_REZ = 6;
    GET_ID = 7;
    GET_EMPLOYEE = 8;
  }

  RequestType type = 1;

  oneof data {
    Employee agentie = 2;
    Trip excursie = 3;
    Reservation rezervare = 4;
    Seat seat = 5;
  }
}

message Response {
  enum ResponseType {
    OK = 0;
    ERROR = 1;
    UPDATE_SEARCH = 2;
    FRIEND_LOGGED_IN = 3;
    FRIEND_LOGGED_OUT = 4;
    EXCURSII = 5;
    EXCURSII_ORE = 6;
    ADDED_REZERVATION = 7;
    EMPLOYEE = 8;
  }

  ResponseType type = 1;

  oneof data {
    Employee agentie = 2;
    Trip excursie = 3;
    Reservation rezervare = 4;
    Seat seat = 5;
  }
  repeated Trip Excursii = 6;
  repeated Seat seats = 7;
  string error = 8;
}